--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/public/images/logos/logo4.jpg"
-    />
+    <link rel="icon" type="image/svg+xml" href="/images/logos/logo4.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diiners Burgers</title>
   </head>
